--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+  <div class="warning-banner">
+    ⚠️ Warning: Site under construction ⚠️
+  </div>
+  
   <header>
     <h1>Phytoplankton BEF–PD Reference Database</h1>
     <p>A moderated collection of studies on biodiversity–ecosystem functioning (BEF) and productivity–diversity (PD) relationships.</p>
@@ -44,6 +49,12 @@
 
     <input type="text" id="searchBox" placeholder="Search title or authors...">
   </section>
+
+   <p>
+     <a href="https://forms.gle/1FAIpQLSeXCQ-O49hzPXfbapt2P1WhQ9sA-D7UC8JjyWfgkw-vkOMQbw" target="_blank">
+       <button>➕ Suggest a New Reference</button>
+     </a>
+   </p>
 
   <section id="results">
     <h2>Approved References</h2>
