Add last updated footer

--- a/index.html
+++ b/index.html
@@ -83,12 +83,13 @@
    </p>
 
   <section id="results">
-    <h2>Approved References</h2>
+    <h2>Selected References</h2>
     <ul id="referenceList"></ul>
   </section>
 
   <footer>
     <p>Maintained as a collaborative effort. New entries are manually approved before appearing here.</p>
+    <p id="lastUpdated"></p>
   </footer>
 
   <script src="script.js"></script>
